Correct Cutoff

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,3 @@
 .flip-project-img img {
-    object-fit: cover;   /* keeps full cover */
     object-position: left center; 
 }
